# RollTheDay

./: main.py  pyproject.toml  rolltheday.db  run_tests.py
app/: dbstats.py  main.py
app/core/: config.py  db.py  logs.py
app/taskgenerator/: generator.py  models.py  routes.py  schemas.py  utils.py
app/tasks/: crud.py  models.py  routes.py  schemas.py  utils.py
app/user_account/: models.py
databasestuff/: subtasktestdata.csv  taskcategorytestdata.csv  useraccounttestdata.csv  weightsettingquery.sql
static/: index.html
tests/: README.md  conftest.py  test_taskgenerator_generator.py  test_taskgenerator_utils.py
